<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/menu_homes" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/person_id"
            android:title="@string/profile" />

        <item
            android:id="@+id/scanner"
            android:icon="@drawable/qrcodesca"
            android:title="@string/qrcode" />


        <item
        android:id="@+id/update_pin"
        android:icon="@drawable/change_password"
        android:title="@string/changepin" />
    <item
        android:id="@+id/privacy"
        android:icon="@drawable/privacy_tip_24"
        android:title="@string/privacy" />
    <item
        android:id="@+id/contact"
        android:icon="@drawable/contact_us"
        android:title="@string/contact" />
    <item
        android:id="@+id/about_us"
        android:icon="@drawable/about"
        android:title="@string/about_us" />
        <item
        android:id="@+id/shareit"
        android:icon="@drawable/share_24"
        android:title="@string/share" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout_24"
        android:title="@string/logout" />
    </group>
</menu>