<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/bottom_navigation"
    tools:context=".About_us">

    <ImageView
        android:id="@+id/bg_img"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="35dp"
        android:scaleType="centerCrop"
        android:src="@drawable/aboutusone" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:padding="5dp"
        android:src="@drawable/backspace_24"
        app:tint="@color/black" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@+id/bg_img"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:elevation="12dp"
        app:cardCornerRadius="12dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginLeft="22dp"
                    android:text="@string/about_us"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line_view"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_below="@id/contact"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginRight="36dp"
                    android:background="@color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line_view"
                    android:layout_marginStart="22dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textdec"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/about"
                        android:layout_marginTop="12dp"
                        android:text="@string/belowlinse"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                </RelativeLayout>


            </RelativeLayout>

        </ScrollView>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        app:itemBackground="@color/lightgrey"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
       app:menu="@menu/menu_navigation" />

</RelativeLayout>